--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </div>
 <div class="callout primary">
 <div class="row column">
-<h1>Hello! This is the portfolio of a very witty person.</h1>
+<h1>If The Shoe Fits!</h1>
 <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla.</p>
 </div>
 </div>
