--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="callout primary">
 <div class="row column">
 <h1>If The Shoe Fits!</h1>
-<p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus luctus urna sed urna ultricies ac tempor dui sagittis. In condimentum facilisis porta. Sed nec diam eu diam mattis viverra. Nulla fringilla.</p>
+<p class="lead">Always wear expensive shoes. People notice</p>
 </div>
 </div>
 <div class="row small-up-2 medium-up-3 large-up-4">
