--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
 <div class="row column">
 <br>
-<img class="thumbnail" src="https://placehold.it/550x350">
+<img class="thumbnail" src="https://lh3.googleusercontent.com/lXP5_9NSI3OJnYtEwX92WyjUBX1uBCSoKcz-Set1Be7ZBwl1NQmUnghQLPCoRVDA4x6yUK4YibkOwA2h1QKDwaIQBYxtmATtTON_HeVy969sWjG7g1Q557KdGfF45v2V9GKt8FipM0Y4l2W7cmdCO39Y98MdEWGCisYwQadfTuGtiz5QMOgQMppDt7yXY4YB2DNEn_g9hB2jxjh9qs2f-0p2GwBl446_rna813gZAjkBtre1yaUb8XXt8VmweY4XRs6jPPfWBLCGBKcPOEtWy1NsCx_VwLWTudNoZGIW_fnql7NqKaqM3HZrUmNogkArHHsn96h-mEmO7pYACfmhLfOHA5aWUbs0LWBGRnYsISB66J1iWy-9G4okuj9jhWLloRetOAtmMmc2p_i5G0yvVmXEiq0Xz8aOTNhEhWmlaJts36kmPT0whIIGe6Anxv8iXQBVbmtn8E-VyXBMwoI1dqXbUhFV5ONyDt68HFsBVVcMnSjZ05lKbXK5Lpq3K7ub01h1Mw-fa9WcZVBsOigyzcnGkp_wFhQEVkNQq_PHGWeZ_XjRYEZVZzvPz1Q572dGSI_kbsz20aPAv4gj_LjjcmdNviFXhvu08WExZGyoh7HazT5GOjCPB_K_g4f4Tk48SBg8V12JGaavOhARVzM6G4s6=w987-h926-no">
 <h5>Mike Mikerson</h5>
 <p>Duis aliquet egestas purus in blandit. Curabitur vulputate, ligula lacinia scelerisque tempor, lacus lacus ornare ante, ac egestas est urna sit amet arcu. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Sed molestie augue sit amet leo.</p>
 </div>
