--- a/index.html
+++ b/index.html
@@ -44,40 +44,9 @@
 <h5>Nike Free Run</h5>
 </div>
 <div class="column">
-<img class="thumbnail" src="https://placehold.it/550x550">
-<h5>My Site</h5>
+<img class="thumbnail" src="https://lh3.googleusercontent.com/yFF5a7wXsURZwO9FC8Cf-mCBRTQtqafwAZrR_bkVpgy768EFMKXob2m9HChyBnp0rKRbsI9t3zWhBWWmVHI4yHaeAGVeW77Qd0XJamTrzCsdBBNWWc9b3Lg_DtEckuPYdpMLu0faBQt_YduL68KRkGfM_83ors4hry9PyQ0ZEQJaWqAiArljXK97IOelw9k7kDZvCdyrs9AKBesSWkfK5O5it5cqeelGD6YeWEwLpCMXjKLJYn4qqf6i4DLlTjUIvHO9kTaOjPkCYJJj_e0uejl2qrUvYKNnZ67ezuc02ApisrzAzTKfzdbTyeDlyuYBQ49CSKeWQIxIp90VOy1B80z1wOGyH0LYGofGWqLdq1Yrq9c-dupD2xemZMboy1Gp7cxEbe5MMfdHd4HoqVMrvvOPwNsEOgmk_VRpGCfp-m6cB0VEOGpwzNZKJX8m7bzfWq0npkEi8weKiKpRB07U6UWXKH6YnjjnqAZSl9pb1arW3InHBGtzIKr-fnPjr4tx1IbbRJo32BUWXqv1mrqb0B1Bcop6G-lKcCPEprjsXJuTsZCPNdLoezQQYoNWwgATFeV1VSrVrYkep7lQ0DP81ekx-lSUYf5SbPcaH66e5PJ4sS-BfgyVU2B-XbaxCb79V8kOuMtWDoEg_q-by7i7kFca=w695-h926-no">
+<h5>shoes</h5>
 </div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/550x550">
-<h5>My Site</h5>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/550x550">
-<h5>My Site</h5>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/550x550">
-<h5>My Site</h5>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/550x550">
-<h5>My Site</h5>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/550x550">
-<h5>My Site</h5>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/550x550">
-<h5>My Site</h5>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/550x550">
-<h5>My Site</h5>
-</div>
-<div class="column">
-<img class="thumbnail" src="https://placehold.it/550x550">
-<h5>My Site</h5>
 </div>
 </div>
 <hr>
