--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <div class="title-bar hide-for-large">
 <div class="title-bar-left">
 <button class="menu-icon" type="button" data-open="my-info"></button>
-<span class="title-bar-title">Mike Mikerson</span>
+<span class="title-bar-title">Bio</span>
 </div>
 </div>
 <div class="callout primary">
