--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 <hr>
 <div class="row">
 <div class="medium-6 columns">
-<h3>Contact Me</h3>
-<p>Vivamus hendrerit arcu sed erat molestie vehicula. Sed auctor neque eu tellus rhoncus ut eleifend nibh porttitor. Ut in nulla enim. Phasellus molestie magna non est bibendum non venenatis nisl tempor. Suspendisse dictum feugiat nisl ut dapibus. Mauris iaculis porttitor.</p>
+<h3>If the shoe fits!</h3>
+<p>If you wanna walk in my shoes you need 10 socks. -Lil Wayne</p>
 <ul class="menu">
 <li><a href="#">Dribbble</a></li>
 <li><a href="#">Facebook</a></li>
