--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
 <div class="row column">
 <br>
-<img class="thumbnail" src="file:///C:/Users/xmanx/Downloads/IMG_1073/IMG_1073001.png">
+<img class="thumbnail" src="https://1drv.ms/u/s!An4Ucb_FyoNDs0jDmLlAMvircdG-">
 <h5>Vapormax</h5>
 <p></p>
 </div>
