--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <div class="off-canvas position-left reveal-for-large" id="my-info" data-off-canvas data-position="left">
 <div class="row column">
 <br>
-<img class="thumbnail" src="https://photos.app.goo.gl/ts2WHD7HVxXUUYLD9">
+<img class="thumbnail" src="http://gdurl.com/wkUk">
 <h5>Vapormax</h5>
 <p></p>
 </div>
